# Zylo

./: LICENSE  README.md  compose-stack.yaml  envoy-override.yaml  loki-config.yml  otel-collector-config.yaml  prometheus.yml
.github/workflows/: aggregator.yml  api-gateway.yml  feed-service.yml  media-service.yml  notification-service.yml  social-graph.yml  user-interaction.yml  user-management.yml
deployment/feed-service/: values.yaml
deployment/feed-service/templates/: hpa.yaml  service.yaml  serviceaccount.yaml
deployment/media-service/: values.yaml
deployment/media-service/templates/: _helpers.tpl  hpa.yaml  service.yaml
deployment/social-graph/: Chart.yaml  values.yaml
deployment/social-graph/templates/: _helpers.tpl  hpa.yaml  service.yaml
deployment/user-interaction/: Chart.yaml
deployment/user-interaction/templates/: NOTES.txt  serviceaccount.yaml
deployment/user-management/: Chart.yaml
deployment/user-management/templates/: serviceaccount.yaml
src/aggregator/: Cargo.toml  Dockerfile  build.rs
src/aggregator/config/: development.json
src/aggregator/proto/: post_server.proto  relationship_service.proto  user_profile_service.proto
src/aggregator/src/: app.rs  auth.rs  main.rs  settings.rs
src/aggregator/src/errors/: app.rs  auth.rs  grpc.rs  mod.rs
src/aggregator/src/models/: app_state.rs  mod.rs  post.rs  user.rs
src/aggregator/src/routes/: post.rs  user.rs
src/aggregator/src/services/: feed_service.rs  key_vault.rs  mod.rs  post_service.rs  user_service.rs
src/aggregator/src/utils/: constants.rs  helpers.rs
src/api-gateway/: ApiGateway.sln
src/api-gateway/ApiGateway/: ApiGateway.csproj  PrefixKeyVaultSecretManager.cs  Program.cs  appsettings.json  ocelot.development.json  ocelot.json  ocelot.production.json  ocelot.staging.json
src/feed-service/: .gitignore  Dockerfile  compose.yaml  go.mod  go.sum
src/feed-service/config/: dev.json
src/feed-service/logger/: logger.go
src/media-service/: .gitignore  Cargo.toml  Dockerfile  build.rs  compose.yaml
src/media-service/config/: development.json
src/media-service/proto/: post_server.proto
src/media-service/src/: app.rs  auth.rs  errors.rs  main.rs  settings.rs
src/media-service/src/decorators/: cache_service_decorator.rs  grpc_server_decorator.rs  mod.rs  post_repo_decorator.rs  s3_service_decorator.rs  user_repo_decorator.rs
src/media-service/src/errors/: amq.rs  app.rs  auth.rs  mod.rs  mongo.rs  observability.rs  redis.rs  request.rs  s3.rs  validation.rs
src/media-service/src/models/: app_state.rs  event_messages.rs  file.rs  mod.rs  post.rs  user.rs
src/media-service/src/repositories/: mod.rs  post_repo.rs  user_repo.rs
src/media-service/src/routes/: post.rs
src/media-service/src/services/: amq.rs  cache_service.rs  database.rs  grpc_server.rs  key_vault.rs  mod.rs  redis.rs  s3.rs  s3_service.rs  user_profile.rs
src/media-service/src/tests/: mod.rs  post_routes_tests.rs
src/media-service/src/tests/common/: containers.rs  context.rs  mod.rs
src/media-service/src/utils/: constants.rs  helpers.rs  mod.rs  request.rs  requests.rs
src/mocked-server/: package-lock.json  package.json
src/mocked-server/src/: server.ts
src/notification-service/: .gitignore  NotificationService.sln  compose.yaml
src/notification-service/NotificationService/: .gitignore  Dockerfile  Program.cs  (+2 more)
src/notification-service/NotificationService.Application/: NotificationService.Application.csproj
src/notification-service/NotificationService.Domain/: NotificationService.Domain.csproj
src/notification-service/NotificationService.Infrastructure/: NotificationService.Infrastructure.csproj
src/social-graph/: .gitignore  Dockerfile  docker-compose.yaml  go.mod  go.sum  test-coverage.sh
src/user-interaction/: .gitignore  Cargo.toml  Dockerfile  build.rs  compose.yaml  otel-collector-config.yaml  prometheus.yml
src/user-interaction/config/: development.json  production.json  test.json
src/user-interaction/migrations/: 20240920160351_create_user_interactions.down.sql  20240920160351_create_user_interactions.up.sql  20241012223528_create_user_table.down.sql  20241012223528_create_user_table.up.sql  20241215233128_delete_user_table.down.sql  20241215233128_delete_user_table.up.sql  20241221230403_add_root_id_into_replies_table.down.sql  20241221230403_add_root_id_into_replies_table.up.sql  20241221233139_add_path_into_replies_table.down.sql  20241221233139_add_path_into_replies_table.up.sql  20250124223047_add_users_and_posts_tables.down.sql  20250124223047_add_users_and_posts_tables.up.sql
src/user-interaction/proto/: reply_server.proto
src/user-interaction/protos/: user-profile-service.proto
src/user-interaction/src/: app.rs  auth.rs  errors.rs  main.rs  setting.rs  settings.rs
src/user-interaction/src/decorators/: cache_service_decorator.rs  grpc_server_decorator.rs  mod.rs  posts_repo_decorator.rs  reply_repo_decorator.rs  users_repo_decorator.rs
src/user-interaction/src/errors/: amq.rs  app.rs  auth.rs  database.rs  mod.rs  postgres.rs  redis.rs  validation.rs
src/user-interaction/src/models/: amq_message.rs  app_state.rs  file.rs  mod.rs  reply.rs  user.rs
src/user-interaction/src/observability/: cache_service_decorator.rs  grpc_server_decorator.rs  interaction_repo_decorator.rs  metrics.rs  mod.rs  reply_repo_decorator.rs  tracing.rs
src/user-interaction/src/repositories/: interaction_repo.rs  mod.rs  posts_repo.rs  reply_repo.rs  users_repo.rs
src/user-interaction/src/routes/: interaction.rs  mod.rs  reply.rs
src/user-interaction/src/services/: amq.rs  amq_client.rs  backup_worker.rs  cache_service.rs  database.rs  grpc_server.rs  key_vault.rs  mod.rs  post_interactions_service.rs  redis.rs  reply_service.rs  user_profile.rs
src/user-interaction/src/utils/: constants.rs  helpers.rs  mod.rs  request.rs
src/user-management/: Dockerfile  UserManagement.sln  docker-compose.yml  feed-service.puml  social-graph.puml  user-management.puml
src/web-ui/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
(+605 files in other folders)
