[package]
name = "aggregator"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0", features = ["serde_derive", "rc"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "2.0.3"
async-trait = "0.1.82"
tracing = "0.1"
tracing-opentelemetry = {version = "0.30.0", features = ["thiserror"]}
tracing-subscriber = {version = "0.3.19", features = ["json", "env-filter"]}
tower = "0.5.2"
tower-http = { version = "0.6.0", features = [
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
    "cors",
    "request-id"
] }
ulid = {version = "1.2.0", features = ["serde"]}
tokio = { version = "1.43", features = ["full"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
prost = "0.13.5"
prost-types = "0.13.5"
tonic = { version = "0.13.0", features = ["transport"] }
opentelemetry = "0.29.1"
opentelemetry-http = "0.29.0"
opentelemetry-otlp = {version = "0.29.0", features = ["grpc-tonic", "metrics", "logs", "trace"] }
opentelemetry_sdk = {version = "0.29.0", features = ["rt-tokio"]}
opentelemetry-appender-tracing = "0.29.1"
reqwest = { version = "0.12.12", features = ["json"] }
[build-dependencies]
tonic-build = "0.13.0"