[package]
name = "media-service"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.14"
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
mongodb = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ulid = { version = "1.1.3", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures = "0.3"
tower-http = { version = "0.6", features = [
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
    "cors",
] }
thiserror = "1.0.63"
chrono = {version = "0.4.38", features = ["serde"]}
jsonwebtoken = "9.3.0"
async-trait = "0.1"
futures-util = "0.3.30"
bytes = { version = "1.7", features = ["serde"] }
log = "0.4.22"
redis = { version = "0.27", features = ["tokio-comp"] }
lapin = "2.5.0"
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
dotenv = "0.15.0"
aws-sdk-s3 = "1.52.0"
aws-config = "1.5.7"
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13.3"
[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
testcontainers = "0.23.1"
testcontainers-modules = { version = "0.11.3", features = ["rabbitmq", "redis", "mongo"] }
mockall = "0.13.0"
test-context = "0.3.0"
pretty_assertions = "1.4.1"
tower = { version = "0.5.1", features = ["util"] }