[package]
name = "media-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
mongodb = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ulid = { version = "1.1.3", features = ["serde"] }
tracing = "0.1"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = {version = "0.3.19", features = ["json", "env-filter"]}
futures = "0.3"
tower = "0.5.2"
tower-http = { version = "0.6", features = [
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
    "cors",
    "request-id"
] }
thiserror = "2.0.11"
chrono = {version = "0.4.38", features = ["serde"]}
jsonwebtoken = "9.3.0"
async-trait = "0.1"
futures-util = "0.3.30"
bytes = { version = "1.7", features = ["serde"] }
redis = { version = "0.28.1", features = ["tokio-comp"] }
lapin = "2.5.0"
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
dotenv = "0.15.0"
aws-sdk-s3 = "1.52.0"
aws-config = "1.5.7"
tonic = { version = "0.12", features = ["transport"] }
tonic-reflection = "0.12.3"
prost = "0.13.3"
opentelemetry = "0.27.1"
opentelemetry-otlp = {version = "0.27.0", features = ["tonic"]}
prometheus = "0.13.4"
opentelemetry_sdk = {version = "0.27.1", features = ["rt-tokio"]}
[build-dependencies]
tonic-build = "0.12.3"