[package]
name = "user-interaction"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.7.5"
sqlx = {version = "0.8", features = ["chrono", "runtime-tokio", "postgres"]}
serde = {version = "1.0", features = ["serde_derive"]}
serde_json = "1.0"
ulid = {version = "1.1.3", features = ["serde"]}
chrono = {version = "0.4.38", features = ["serde"]}
thiserror = "1.0.63"
redis = {version = "0.27", features = ["tokio-comp"]}
config = "0.14.0"
async-trait = "0.1.82"
log = "0.4.22"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.6.0", features = [
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
    "cors",
] }
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = {version = "0.13.0", features = ["signal"]}
lapin = "2.5.0"
jsonwebtoken = "9.3.0"
dotenv = "0.15.0"
reqwest = {version = "0.12.7", features = ["json", "blocking"]}
futures-util = "0.3.30"
aws-sdk-s3 = "1.56.0"
aws-config = "1.5.8"
prost = "0.13.3"
tonic = {version = "0.12", features = ["transport"]}
[build-dependencies]
tonic-build = "0.12.3"