[package]
name = "user-interaction"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.8.1"
sqlx = { version = "0.8", features = ["chrono", "runtime-tokio", "postgres"] }
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
ulid = { version = "1.1.3", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "2.0.3"
redis = { version = "0.28.0", features = ["tokio-comp"] }
async-trait = "0.1.82"
tracing = "0.1"
tracing-opentelemetry = {version = "0.29.0", features = ["thiserror"]}
tracing-subscriber = {version = "0.3.19", features = ["json", "env-filter"]}
tower = "0.5.2"
tower-http = { version = "0.6.0", features = [
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
    "cors",
    "request-id"
] }
tokio = { version = "1.43", features = ["full"] }
lapin = "2.5.0"
jsonwebtoken = "9.3.0"
dotenv = "0.15.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
futures-util = "0.3.3"
prost = "0.13.4"
tonic = { version = "0.12", features = ["transport"] }
opentelemetry = "0.28.0"
opentelemetry-otlp = {version = "0.28.0", features = ["grpc-tonic"] }
opentelemetry_sdk = {version = "0.28.0", features = ["rt-tokio"]}
opentelemetry-appender-tracing = "0.28.1"
opentelemetry-http = "0.28.0"

[build-dependencies]
tonic-build = "0.12.3"
